--- a/styles/partials/_porfolio.scss
+++ b/styles/partials/_porfolio.scss
@@ -4,7 +4,7 @@
     grid-template-rows: repeat(4, 1fr);
     height: 100vh;
     padding: 1.5rem;
-    padding-bottom: 230px;
+    padding-bottom: 150px;
     column-gap: 10px;
     row-gap: 10px;
     background-color: map-get($color,backgroundContenido );
@@ -71,25 +71,42 @@
 
 @media screen and (max-width: 480px) {
     .grid__pO {
-        grid-template-columns: repeat(12, 1fr);
-        grid-template-rows: repeat(4, 1fr);
+        grid-template-columns: repeat(6, 1fr);
+        grid-template-rows: repeat(7, 1fr);
         padding: 5px;
-        padding-top: 50px;
+        padding-bottom: 600px;
+        padding-top: 15px;
         column-gap: 5px;
-        row-gap: 10px;
-        .grid__img1 {
-            grid-column: 2/7;
+        row-gap: 5px;
+        .grid__img:nth-of-type(1) {
+            grid-column: 2/6;
             grid-row: 1/2;
         }
-    
-        .grid__img2 {
-            grid-column: 2/12;
+        
+        .grid__img:nth-of-type(2) {
+            grid-column: 2/6;
             grid-row: 2/3;
         }
-    
-        .grid__img3 {
-            grid-column: 7/12;
-            grid-row: 1/2;
+        
+        .grid__img:nth-of-type(3) {
+            grid-column: 4/6;
+            grid-row: 3/4;
+        }
+        .grid__img:nth-of-type(4) {
+            grid-column: 2/6;
+            grid-row: 4/5;
+        }
+        .grid__img:nth-of-type(5) {
+            grid-column: 2/6;
+            grid-row: 5/6;
+        }
+        .grid__img:nth-of-type(6) {
+            grid-column: 2/4;
+            grid-row: 3/4;
+        }
+        .grid__img:nth-of-type(7) {
+            grid-column: 2/6;
+            grid-row: 6/7;
         }
     
         img {
@@ -118,25 +135,42 @@
 
 @media screen and (min-width: 481px) and (max-width: 760px) {
     .grid__pO {
-        grid-template-columns: repeat(12, 1fr);
+        grid-template-columns: repeat(6, 1fr);
         grid-template-rows: repeat(4, 1fr);
         padding: 5px;
-        padding-top: 50px;
+        padding-top: 10px;
+        padding-bottom: 800px;
         column-gap: 5px;
         row-gap: 10px;
-        .grid__img1 {
-            grid-column: 1/8;
+        .grid__img:nth-of-type(1) {
+            grid-column: 1/4;
             grid-row: 1/2;
         }
-    
-        .grid__img2 {
-            grid-column: 1/8;
+        
+        .grid__img:nth-of-type(2) {
+            grid-column: 4/7;
+            grid-row: 1/2;
+        }
+        
+        .grid__img:nth-of-type(3) {
+            grid-column: 4/7;
             grid-row: 2/3;
         }
-    
-        .grid__img3 {
-            grid-column: 8/13;
-            grid-row: 1/3;
+        .grid__img:nth-of-type(4) {
+            grid-column: 4/7;
+            grid-row: 3/4;
+        }
+        .grid__img:nth-of-type(5) {
+            grid-column: 1/4;
+            grid-row: 3/4;
+        }
+        .grid__img:nth-of-type(6) {
+            grid-column: 1/4;
+            grid-row: 2/3;
+        }
+        .grid__img:nth-of-type(7) {
+            grid-column: 1/7;
+            grid-row: 4/5;
         }
     
         .pO__titulo {
@@ -162,4 +196,10 @@
             }
         }
     }
+}
+@media screen and (min-width: 761px) and (max-width: 1070px)  {
+    .grid__pO{
+        padding-bottom: 1rem;
+    }
+    
 }
