--- a/styles/partials/_sobremi.scss
+++ b/styles/partials/_sobremi.scss
@@ -4,7 +4,7 @@
     grid-template-rows: repeat(5, 1fr);
     height: 100vh;
     column-gap: 10px;
-    background-color: map-get($color,backgroundContenido);
+    background-color: map-get($color, backgroundContenido);
 
     .grid__contenido:nth-of-type(1) {
         grid-column: 2 / 6;
@@ -14,12 +14,13 @@
         justify-content: flex-end;
         padding-bottom: 2rem;
         letter-spacing: 0.5cm;
-        color:map-get($color,color_textTitulo );
+        color: map-get($color, color_textTitulo);
     }
 
     .grid__contenido:nth-of-type(2) {
         grid-column: 2 / 6;
         grid-row: 3 / 6;
+        letter-spacing: 0.02cm;
         line-height: 0.6cm;
     }
 
@@ -60,40 +61,44 @@
         grid-template-columns: repeat(6, 1fr);
         grid-template-rows: repeat(3, 1fr);
         height: 100vh;
+        padding-bottom: 8rem;
+
         .grid__contenido:nth-of-type(1) {
             grid-column: 2 / 6;
             grid-row: 1 / 1;
             justify-content: center;
             align-items: center;
-            padding-bottom: 2rem;
+            padding-bottom: 4rem;
             letter-spacing: 0.2cm;
             height: 100px;
         }
-    
+
         .grid__contenido:nth-of-type(2) {
             grid-column: 2 / 6;
             grid-row: 2 / 6;
             font-size: 12px;
             padding-top: 105px;
-            overflow: hidden;
         }
-    
+
         .grid__contenido:nth-of-type(3) {
             grid-column: 2 /6;
             grid-row: 1 / 2;
             line-height: 0.6cm;
             padding-top: 85px;
         }
-        .grid__contenido{
+
+        .grid__contenido {
             h1 {
-                font-size: map-get($tamanos,textTituloMed);
+                font-size: map-get($tamanos, textTituloMed);
             }
+
             img {
                 width: 100%;
                 height: 100%;
                 object-fit: cover;
-                
+
             }
+
             .grid__linea {
                 position: relative;
                 top: 5px;
@@ -108,43 +113,45 @@
         grid-template-columns: repeat(6, 1fr);
         grid-template-rows: repeat(3, 1fr);
         height: 100vh;
+        padding-bottom: 8rem;
+
         .grid__contenido:nth-of-type(1) {
             grid-column: 2 / 6;
             grid-row: 1 / 1;
             justify-content: center;
             align-items: center;
-            padding-bottom: 2rem;
+            padding-bottom: 4rem;
             letter-spacing: 0.5cm;
             height: 100px;
         }
-    
+
         .grid__contenido:nth-of-type(2) {
             grid-column: 2 / 6;
             grid-row: 2 / 6;
             font-size: 12px;
             padding-top: 105px;
         }
-    
+
         .grid__contenido:nth-of-type(3) {
             grid-column: 2 /6;
             grid-row: 1 / 2;
             line-height: 0.6cm;
             padding-top: 85px;
         }
-        .grid__contenido{
 
-        }
+        .grid__contenido {}
+
         .grid__contenido h1 {
             font-size: 25px;
         }
-    
+
         .grid__contenido img {
             width: 100%;
             height: 100%;
             object-fit: cover;
-            
+
         }
-    
+
         .grid__linea {
             position: relative;
             top: 5px;
@@ -152,3 +159,54 @@
         }
     }
 }
+
+@media screen and (min-width: 761px) and (max-width: 1070px) {
+    .grid__sM {
+        grid-template-columns: repeat(6, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+        height: 100vh;
+        padding-bottom: 9rem;
+
+        .grid__contenido:nth-of-type(1) {
+            grid-column: 2 / 6;
+            grid-row: 1 / 1;
+            justify-content: center;
+            align-items: center;
+            padding-bottom: 4rem;
+            letter-spacing: 0.5cm;
+            height: 100px;
+        }
+
+        .grid__contenido:nth-of-type(2) {
+            grid-column: 2 / 6;
+            grid-row: 2 / 6;
+            font-size: 12px;
+            padding-top: 115px;
+        }
+
+        .grid__contenido:nth-of-type(3) {
+            grid-column: 2 /6;
+            grid-row: 1 / 2;
+            line-height: 0.6cm;
+            padding-top: 85px;
+        }
+
+        .grid__contenido {}
+
+        .grid__contenido h1 {
+            font-size: 25px;
+        }
+
+        .grid__contenido img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+
+        }
+
+        .grid__linea {
+            position: relative;
+            top: 5px;
+            width: 45px;
+        }
+}   }
