--- a/styles/styles.css
+++ b/styles/styles.css
@@ -465,6 +465,7 @@ footer {
 .grid__sM .grid__contenido:nth-of-type(2) {
   grid-column: 2/6;
   grid-row: 3/6;
+  letter-spacing: 0.02cm;
   line-height: 0.6cm;
 }
 .grid__sM .grid__contenido:nth-of-type(3) {
@@ -500,13 +501,14 @@ footer {
     grid-template-columns: repeat(6, 1fr);
     grid-template-rows: repeat(3, 1fr);
     height: 100vh;
+    padding-bottom: 8rem;
   }
   .grid__sM .grid__contenido:nth-of-type(1) {
     grid-column: 2/6;
     grid-row: 1/1;
     justify-content: center;
     align-items: center;
-    padding-bottom: 2rem;
+    padding-bottom: 4rem;
     letter-spacing: 0.2cm;
     height: 100px;
   }
@@ -515,7 +517,6 @@ footer {
     grid-row: 2/6;
     font-size: 12px;
     padding-top: 105px;
-    overflow: hidden;
   }
   .grid__sM .grid__contenido:nth-of-type(3) {
     grid-column: 2/6;
@@ -543,13 +544,14 @@ footer {
     grid-template-columns: repeat(6, 1fr);
     grid-template-rows: repeat(3, 1fr);
     height: 100vh;
+    padding-bottom: 8rem;
   }
   .grid__sM .grid__contenido:nth-of-type(1) {
     grid-column: 2/6;
     grid-row: 1/1;
     justify-content: center;
     align-items: center;
-    padding-bottom: 2rem;
+    padding-bottom: 4rem;
     letter-spacing: 0.5cm;
     height: 100px;
   }
@@ -580,13 +582,56 @@ footer {
     width: 45px;
   }
 }
+@media screen and (min-width: 761px) and (max-width: 1070px) {
+  .grid__sM {
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    height: 100vh;
+    padding-bottom: 9rem;
+  }
+  .grid__sM .grid__contenido:nth-of-type(1) {
+    grid-column: 2/6;
+    grid-row: 1/1;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 4rem;
+    letter-spacing: 0.5cm;
+    height: 100px;
+  }
+  .grid__sM .grid__contenido:nth-of-type(2) {
+    grid-column: 2/6;
+    grid-row: 2/6;
+    font-size: 12px;
+    padding-top: 115px;
+  }
+  .grid__sM .grid__contenido:nth-of-type(3) {
+    grid-column: 2/6;
+    grid-row: 1/2;
+    line-height: 0.6cm;
+    padding-top: 85px;
+  }
+  .grid__sM .grid__contenido h1 {
+    font-size: 25px;
+  }
+  .grid__sM .grid__contenido img {
+    width: 100%;
+    height: 100%;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+  .grid__sM .grid__linea {
+    position: relative;
+    top: 5px;
+    width: 45px;
+  }
+}
 .grid__pO {
   display: grid;
   grid-template-columns: repeat(9, 1fr);
   grid-template-rows: repeat(4, 1fr);
   height: 100vh;
   padding: 1.5rem;
-  padding-bottom: 230px;
+  padding-bottom: 150px;
   -moz-column-gap: 10px;
        column-gap: 10px;
   row-gap: 10px;
@@ -653,25 +698,42 @@ footer {
 
 @media screen and (max-width: 480px) {
   .grid__pO {
-    grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: repeat(4, 1fr);
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(7, 1fr);
     padding: 5px;
-    padding-top: 50px;
+    padding-bottom: 600px;
+    padding-top: 15px;
     -moz-column-gap: 5px;
          column-gap: 5px;
-    row-gap: 10px;
+    row-gap: 5px;
   }
-  .grid__pO .grid__img1 {
-    grid-column: 2/7;
+  .grid__pO .grid__img:nth-of-type(1) {
+    grid-column: 2/6;
     grid-row: 1/2;
   }
-  .grid__pO .grid__img2 {
-    grid-column: 2/12;
+  .grid__pO .grid__img:nth-of-type(2) {
+    grid-column: 2/6;
     grid-row: 2/3;
   }
-  .grid__pO .grid__img3 {
-    grid-column: 7/12;
-    grid-row: 1/2;
+  .grid__pO .grid__img:nth-of-type(3) {
+    grid-column: 4/6;
+    grid-row: 3/4;
+  }
+  .grid__pO .grid__img:nth-of-type(4) {
+    grid-column: 2/6;
+    grid-row: 4/5;
+  }
+  .grid__pO .grid__img:nth-of-type(5) {
+    grid-column: 2/6;
+    grid-row: 5/6;
+  }
+  .grid__pO .grid__img:nth-of-type(6) {
+    grid-column: 2/4;
+    grid-row: 3/4;
+  }
+  .grid__pO .grid__img:nth-of-type(7) {
+    grid-column: 2/6;
+    grid-row: 6/7;
   }
   .grid__pO img {
     width: 100%;
@@ -695,25 +757,42 @@ footer {
 }
 @media screen and (min-width: 481px) and (max-width: 760px) {
   .grid__pO {
-    grid-template-columns: repeat(12, 1fr);
+    grid-template-columns: repeat(6, 1fr);
     grid-template-rows: repeat(4, 1fr);
     padding: 5px;
-    padding-top: 50px;
+    padding-top: 10px;
+    padding-bottom: 800px;
     -moz-column-gap: 5px;
          column-gap: 5px;
     row-gap: 10px;
   }
-  .grid__pO .grid__img1 {
-    grid-column: 1/8;
+  .grid__pO .grid__img:nth-of-type(1) {
+    grid-column: 1/4;
     grid-row: 1/2;
   }
-  .grid__pO .grid__img2 {
-    grid-column: 1/8;
+  .grid__pO .grid__img:nth-of-type(2) {
+    grid-column: 4/7;
+    grid-row: 1/2;
+  }
+  .grid__pO .grid__img:nth-of-type(3) {
+    grid-column: 4/7;
     grid-row: 2/3;
   }
-  .grid__pO .grid__img3 {
-    grid-column: 8/13;
-    grid-row: 1/3;
+  .grid__pO .grid__img:nth-of-type(4) {
+    grid-column: 4/7;
+    grid-row: 3/4;
+  }
+  .grid__pO .grid__img:nth-of-type(5) {
+    grid-column: 1/4;
+    grid-row: 3/4;
+  }
+  .grid__pO .grid__img:nth-of-type(6) {
+    grid-column: 1/4;
+    grid-row: 2/3;
+  }
+  .grid__pO .grid__img:nth-of-type(7) {
+    grid-column: 1/7;
+    grid-row: 4/5;
   }
   .grid__pO .pO__titulo {
     font-size: 12px;
@@ -733,6 +812,11 @@ footer {
   .grid__pO img:hover {
     transform: scale(102%);
     opacity: 1;
+  }
+}
+@media screen and (min-width: 761px) and (max-width: 1070px) {
+  .grid__pO {
+    padding-bottom: 1rem;
   }
 }
 .grid__sE {
