--- a/styles/partials/_contacto.scss
+++ b/styles/partials/_contacto.scss
@@ -9,13 +9,18 @@
     .contacto h1 {
         color: rgba(34, 34, 34, 0.76);
         letter-spacing: 5px;
+        padding-bottom: 25px;
     }
-
+    .contacto p{
+        letter-spacing: 0.5px;
+        line-height: 0.6cm;
+        
+    }
     .contacto:nth-of-type(1) {
-        grid-column: 3/4;
-        grid-row: 2/5;
+        grid-column: 2/5;
+        grid-row: 2/4;
     }
-
+   
     .formulario:nth-of-type(2) {
         margin: auto;
         box-sizing: border-box;
@@ -23,12 +28,20 @@
         justify-content: center;
         align-items: flex-start;
         width: 400px;
-        grid-column: 5/9;
+        grid-column: 6/10;
         grid-row: 2/5;
         padding: 30px;
         border-radius: 10px;
         background-color: rgb(255, 255, 255);
         box-shadow: 16px 13px 47px rgba(0, 0, 0, 0.425);
+    }
+     .contacto__img:nth-of-type(3){
+        grid-column: 3/4;
+        grid-row: 4/5;
+    }
+    img{
+        max-width: 200px;
+        
     }
 
     .formulario {
@@ -38,7 +51,7 @@
             width: 100%;
             margin-top: 10px;
             margin-bottom: 15px;
-            padding: 7px;
+            padding: 10px;
             box-sizing: border-box;
             border: none;
             border-bottom: 1px solid rgba(77, 77, 77, 0.767);
@@ -69,31 +82,42 @@
 @media screen and (max-width: 480px) {
     .grillaCont {
         grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(5, 1fr);
-        height: 100vh;
+        grid-template-rows: repeat(10, 1fr);
+        height: 150vh;
         column-gap: 10px;
         padding-left: 50px;
         padding-right: 50px;
+        padding-bottom: 50px;
         .contacto:nth-of-type(1) {
-            grid-column: 1/3;
+            grid-column: 1/4;
             grid-row: 1/1;
-            display: flex;
-            justify-content: center;
-            align-items: center;
+            padding-top: 25px;
+            text-align: center;
             letter-spacing: 5px;
-    
+        }
+        .contacto p{
+            padding-bottom: 50px;
         }
         
         .formulario:nth-of-type(2) {
             grid-column: 1/3;
-            grid-row: 2/4;
+            grid-row: 2/6;
             justify-content: center;
-            align-items: flex-start;
+            align-items: center;
             width: 300px;
             padding: 30px;
+            padding-bottom: 80px;
             border-radius: 10px;
             background-color: rgb(255, 255, 255);
             box-shadow: 16px 13px 47px rgba(0, 0, 0, 0.425);
+        }
+        .contacto__img:nth-of-type(3){
+            grid-column: 2/4;
+            grid-row: 9/10;
+            
+        }
+        img{
+            max-width: 80px;
         }
         .formulario{
             label {
@@ -101,8 +125,8 @@
             }
         
             textarea {
-                height: 100px;
-                max-height: 100px;
+                height: 80px;
+                max-height: 150px;
             }
         
             #boton {
@@ -121,23 +145,27 @@
     .grillaCont {
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(5, 1fr);
-        height: 100vh;
+        height: 130vh;
         column-gap: 10px;
         padding-left: 50px;
         padding-right: 50px;
+        padding-bottom: 80px;
         .contacto:nth-of-type(1) {
             grid-column: 1/3;
             grid-row: 1/1;
-            display: flex;
-            justify-content: center;
-            align-items: center;
             letter-spacing: 5px;
-    
+            text-align: center;
+            h1{
+                padding-top: 15px;
+            }
+            p{
+                padding-bottom: 35px;
+            }
         }
     
         .formulario:nth-of-type(2) {
             grid-column: 1/3;
-            grid-row: 2/4;
+            grid-row: 3/5;
             justify-content: center;
             align-items: flex-start;
             width: 300px;
@@ -145,6 +173,16 @@
             border-radius: 10px;
             background-color: rgb(255, 255, 255);
             box-shadow: 16px 13px 47px rgba(0, 0, 0, 0.425);
+        }
+        .contacto__img:nth-of-type(3){
+            grid-column: 2/4;
+            grid-row: 2/3;
+            height: 50%;
+            display: flex;
+            justify-content: center;
+            img{
+                max-width: 80px;
+            }
         }
         .formulario{
             label {
@@ -155,15 +193,62 @@
                 height: 100px;
                 max-height: 100px;
             }
+        }
+    }
+}
+@media screen and (min-width: 761px) and (max-width: 1070px){
+    .grillaCont {
+        grid-template-columns: repeat(12, 1fr);
+        grid-template-rows: repeat(5, 1fr);
+        height: 100vh;
+        column-gap: 10px;
+        padding-top: 35px;
+        padding-left: 50px;
+        padding-right: 50px;
+        padding-bottom: 80px;
+        .contacto:nth-of-type(1) {
+            grid-column: 1/6;
+            grid-row: 1/2;
+            letter-spacing: 5px;
+            
+            h1{
+                padding-top: 15px;
+            }
+            p{
+                padding-bottom: 35px;
+            }
+        }
+    
+        .formulario:nth-of-type(2) {
+            grid-column: 8/10;
+            grid-row: 1/3;
+            justify-content: center;
+            align-items: flex-start;
+            width: 350px;
+            padding: 30px;
+            border-radius: 10px;
+            background-color: rgb(255, 255, 255);
+            box-shadow: 16px 13px 47px rgba(0, 0, 0, 0.425);
+        }
+        .contacto__img:nth-of-type(3){
+            grid-column: 2/4;
+            grid-row: 2/3;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            img{
+                max-width: 100px;
+            }
+        }
+        .formulario{
+            
+            label {
+                font-size: 12px;
+            }
         
-            #boton {
-                background-color: rgb(56, 54, 88);
-                border: none;
-                color: rgb(223, 223, 223);
-                padding: 15px;
-                &:hover {
-                    cursor: pointer;
-                }
+            textarea {
+                height: 100px;
+                max-height: 100px;
             }
         }
     }
