--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1237,10 +1237,15 @@ footer {
 .grillaCont .contacto h1 {
   color: rgba(34, 34, 34, 0.76);
   letter-spacing: 5px;
+  padding-bottom: 25px;
+}
+.grillaCont .contacto p {
+  letter-spacing: 0.5px;
+  line-height: 0.6cm;
 }
 .grillaCont .contacto:nth-of-type(1) {
-  grid-column: 3/4;
-  grid-row: 2/5;
+  grid-column: 2/5;
+  grid-row: 2/4;
 }
 .grillaCont .formulario:nth-of-type(2) {
   margin: auto;
@@ -1249,19 +1254,26 @@ footer {
   justify-content: center;
   align-items: flex-start;
   width: 400px;
-  grid-column: 5/9;
+  grid-column: 6/10;
   grid-row: 2/5;
   padding: 30px;
   border-radius: 10px;
   background-color: rgb(255, 255, 255);
   box-shadow: 16px 13px 47px rgba(0, 0, 0, 0.425);
 }
+.grillaCont .contacto__img:nth-of-type(3) {
+  grid-column: 3/4;
+  grid-row: 4/5;
+}
+.grillaCont img {
+  max-width: 200px;
+}
 .grillaCont .formulario input,
 .grillaCont .formulario textarea {
   width: 100%;
   margin-top: 10px;
   margin-bottom: 15px;
-  padding: 7px;
+  padding: 10px;
   box-sizing: border-box;
   border: none;
   border-bottom: 1px solid rgba(77, 77, 77, 0.767);
@@ -1286,38 +1298,49 @@ footer {
 @media screen and (max-width: 480px) {
   .grillaCont {
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(5, 1fr);
-    height: 100vh;
+    grid-template-rows: repeat(10, 1fr);
+    height: 150vh;
     -moz-column-gap: 10px;
          column-gap: 10px;
     padding-left: 50px;
     padding-right: 50px;
+    padding-bottom: 50px;
   }
   .grillaCont .contacto:nth-of-type(1) {
-    grid-column: 1/3;
+    grid-column: 1/4;
     grid-row: 1/1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    padding-top: 25px;
+    text-align: center;
     letter-spacing: 5px;
+  }
+  .grillaCont .contacto p {
+    padding-bottom: 50px;
   }
   .grillaCont .formulario:nth-of-type(2) {
     grid-column: 1/3;
-    grid-row: 2/4;
+    grid-row: 2/6;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
     width: 300px;
     padding: 30px;
+    padding-bottom: 80px;
     border-radius: 10px;
     background-color: rgb(255, 255, 255);
     box-shadow: 16px 13px 47px rgba(0, 0, 0, 0.425);
+  }
+  .grillaCont .contacto__img:nth-of-type(3) {
+    grid-column: 2/4;
+    grid-row: 9/10;
+  }
+  .grillaCont img {
+    max-width: 80px;
   }
   .grillaCont .formulario label {
     font-size: 12px;
   }
   .grillaCont .formulario textarea {
-    height: 100px;
-    max-height: 100px;
+    height: 80px;
+    max-height: 150px;
   }
   .grillaCont .formulario #boton {
     background-color: rgb(56, 54, 88);
@@ -1333,23 +1356,28 @@ footer {
   .grillaCont {
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(5, 1fr);
-    height: 100vh;
+    height: 130vh;
     -moz-column-gap: 10px;
          column-gap: 10px;
     padding-left: 50px;
     padding-right: 50px;
+    padding-bottom: 80px;
   }
   .grillaCont .contacto:nth-of-type(1) {
     grid-column: 1/3;
     grid-row: 1/1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     letter-spacing: 5px;
+    text-align: center;
+  }
+  .grillaCont .contacto:nth-of-type(1) h1 {
+    padding-top: 15px;
+  }
+  .grillaCont .contacto:nth-of-type(1) p {
+    padding-bottom: 35px;
   }
   .grillaCont .formulario:nth-of-type(2) {
     grid-column: 1/3;
-    grid-row: 2/4;
+    grid-row: 3/5;
     justify-content: center;
     align-items: flex-start;
     width: 300px;
@@ -1358,6 +1386,16 @@ footer {
     background-color: rgb(255, 255, 255);
     box-shadow: 16px 13px 47px rgba(0, 0, 0, 0.425);
   }
+  .grillaCont .contacto__img:nth-of-type(3) {
+    grid-column: 2/4;
+    grid-row: 2/3;
+    height: 50%;
+    display: flex;
+    justify-content: center;
+  }
+  .grillaCont .contacto__img:nth-of-type(3) img {
+    max-width: 80px;
+  }
   .grillaCont .formulario label {
     font-size: 12px;
   }
@@ -1365,14 +1403,57 @@ footer {
     height: 100px;
     max-height: 100px;
   }
-  .grillaCont .formulario #boton {
-    background-color: rgb(56, 54, 88);
-    border: none;
-    color: rgb(223, 223, 223);
-    padding: 15px;
+}
+@media screen and (min-width: 761px) and (max-width: 1070px) {
+  .grillaCont {
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+    height: 100vh;
+    -moz-column-gap: 10px;
+         column-gap: 10px;
+    padding-top: 35px;
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-bottom: 80px;
   }
-  .grillaCont .formulario #boton:hover {
-    cursor: pointer;
+  .grillaCont .contacto:nth-of-type(1) {
+    grid-column: 1/6;
+    grid-row: 1/2;
+    letter-spacing: 5px;
+  }
+  .grillaCont .contacto:nth-of-type(1) h1 {
+    padding-top: 15px;
+  }
+  .grillaCont .contacto:nth-of-type(1) p {
+    padding-bottom: 35px;
+  }
+  .grillaCont .formulario:nth-of-type(2) {
+    grid-column: 8/10;
+    grid-row: 1/3;
+    justify-content: center;
+    align-items: flex-start;
+    width: 350px;
+    padding: 30px;
+    border-radius: 10px;
+    background-color: rgb(255, 255, 255);
+    box-shadow: 16px 13px 47px rgba(0, 0, 0, 0.425);
+  }
+  .grillaCont .contacto__img:nth-of-type(3) {
+    grid-column: 2/4;
+    grid-row: 2/3;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+  }
+  .grillaCont .contacto__img:nth-of-type(3) img {
+    max-width: 100px;
+  }
+  .grillaCont .formulario label {
+    font-size: 12px;
+  }
+  .grillaCont .formulario textarea {
+    height: 100px;
+    max-height: 100px;
   }
 }
 * {
